[package]
name = "domain-tools"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.0"

[dependencies]
bytes    = "1"
clap     = { version = "4", features = ["derive", "unstable-doc"] }
chrono   = { version = "0.4.38", features = [ "alloc", "clock" ] }
domain   = { version = "0.10", features = ["resolv", "unstable-client-transport", "unstable-server-transport", "siphasher"]}
tokio    = { version = "1.33", features = ["rt-multi-thread"] }

# For era:
daemonbase           = { version = "0.1" }
rand                 = { version = "0.8" }
tracing              = { version = "0.1", features = ["log"] }
